# simple_password_generator

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
src/: clipboard.rs  generator.rs  lib.rs  main.rs
src/clipboard/: shared.rs  system_specific_apis.rs
src/clipboard/system_specific_apis/: ios_copy.rs  linux_copy.rs  windows_copy.rs
