[package]
name = "simple_password_generator"
authors = ["christian cecilia <christian.cecilia1@gmail.com>"]
version = "1.0.1"
edition = "2021"
license = "MIT"
description = "Simple CLI password generator. Can also be used as lib in other porjects"
repository = "https://github.com/CCecilia/simple_password_generator"
keywords = ["Windows", "winapi", "clipboard"]

[[bin]]
name = "spg"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
clap = { version = "4.0.29", features = ["derive"] }

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winuser", "winbase"] }
scopeguard = "1.1.0"